--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "externals/download-mingw-rpm"]
+[submodule "download-mingw-rpm"]
 	path = externals/download-mingw-rpm
 	url = https://github.com/mkbosmans/download-mingw-rpm.git
